--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  mysql-volume:
 services:
   app:
     build: ./docker
@@ -16,3 +18,5 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: pass
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    volumes:
+      - mysql-volume:/var/lib/mysql
