--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,3 +5,6 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-install pdo_mysql
     
 RUN sed -i 's!/var/www/html!/var/www/app/public!g' /etc/apache2/sites-available/000-default.conf
+
+RUN cd /etc/apache2/mods-enabled \
+&& ln -s ../mods-available/rewrite.load
