--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,12 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - mysql-volume:/var/lib/mysql
+  db-test:
+    image: mysql:8.0
+    ports:
+      - 3307:3306
+    environment:
+      MYSQL_DATABASE: database_test
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
