--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,25 +22,36 @@ jobs:
         env:
           MYSQL_DATABASE: laravel
           MYSQL_USER: root
-          MYSQL_PASSWORD:
-          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_PASSWORD: password
+
+    env:
+      DB_CONNECTION: mysql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 3306
+      DB_DATABASE: laravel
+      DB_USERNAME: root
+      DB_PASSWORD: password
 
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
     - uses: actions/checkout@v2
-    - name: Change working directory
-      run: cd app
     - name: Copy .env
       run: cp .env.example .env
+      working-directory: ./app
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
+      working-directory: ./app
     - name: Generate key
       run: php artisan key:generate
+      working-directory: ./app
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+      working-directory: ./app
     - name: Create Database
       run: php artisan migrate
+      working-directory: ./app
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       run: vendor/bin/phpunit
+      working-directory: ./app
