--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,7 @@ jobs:
         image: mysql:8.0
         ports:
           - 3306:3306
+        options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
         env:
           MYSQL_DATABASE: laravel
           MYSQL_USER: root
