--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -24,6 +24,7 @@ jobs:
           MYSQL_DATABASE: laravel
           MYSQL_USER: user
           MYSQL_PASSWORD: password
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
 
     env:
       DB_CONNECTION: mysql
