--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -45,6 +45,9 @@ jobs:
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
       working-directory: ./app
+    - name: composer dump autoloaded
+      run: composer dump-autoload
+      working-directory: ./app
     - name: Generate key
       run: php artisan key:generate
       working-directory: ./app
