--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -74,12 +74,26 @@ jobs:
       contents: read
     env:
       AWS_ROLE_ARN: arn:aws:iam::280107060642:role/role-for-github-actions
+      ECR_REGISTRY: 280107060642.dkr.ecr.us-west-1.amazonaws.com
+      ECR_REPOSITORY: rental-app-feature
     steps:
       - uses: actions/checkout@v2
+      - uses: docker/setup-buildx-action@v1
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
           role-session-name: deploy-role-session
           aws-region: us-west-1
-      - run: aws sts get-caller-identity
+      - name: Login to ECR
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.ECR_REGISTRY }}
+      - name: Build and Push image to ECR
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: docker/Dockerfile
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
