ECSへデプロイ

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -97,3 +97,16 @@ jobs:
           file: docker/Dockerfile
           push: true
           tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+      - name: Render Amazon ECS task definition
+        id: render-container
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: aws/task-definition.json
+          container-name: apache-laravel
+          image: 280107060642.dkr.ecr.us-west-1.amazonaws.com/rental-app-feature:latest
+      - name: Deploy to Amazon ECS service
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.render-container.outputs.task-definition }}
+          service: rental-app-service
+          cluster: rental-app-cluster-def1
