--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -69,6 +69,7 @@ jobs:
 
   aws-deploy:
     runs-on: ubuntu-latest
+    needs: laravel-tests
     permissions:
       id-token: write
       contents: read
@@ -110,3 +111,4 @@ jobs:
           task-definition: ${{ steps.render-container.outputs.task-definition }}
           service: rental-app-service
           cluster: rental-app-cluster-def1
+          force-new-deployment: true
