--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -68,6 +68,7 @@ jobs:
       working-directory: ./app
 
   aws-deploy:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: laravel-tests
     permissions:
@@ -76,7 +77,7 @@ jobs:
     env:
       AWS_ROLE_ARN: arn:aws:iam::280107060642:role/role-for-github-actions
       ECR_REGISTRY: 280107060642.dkr.ecr.us-west-1.amazonaws.com
-      ECR_REPOSITORY: rental-app-feature
+      ECR_REPOSITORY: rental-app
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
@@ -104,7 +105,7 @@ jobs:
         with:
           task-definition: aws/task-definition.json
           container-name: apache-laravel
-          image: 280107060642.dkr.ecr.us-west-1.amazonaws.com/rental-app-feature:${{ github.sha }}
+          image: 280107060642.dkr.ecr.us-west-1.amazonaws.com/rental-app:${{ github.sha }}
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
