docker-composeでコンテキストを明示

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ volumes:
   mysql-volume:
 services:
   app:
-    build: ./docker
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     ports:
       - 80:80
     volumes:
