プルリクをマージした時のみデプロイする

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -68,7 +68,7 @@ jobs:
       working-directory: ./app
 
   aws-deploy:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: laravel-tests
     permissions:
