ロールとECRリポジトリ情報をsecretsへ格納

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -74,10 +74,6 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    env:
-      AWS_ROLE_ARN: arn:aws:iam::280107060642:role/role-for-github-actions
-      ECR_REGISTRY: 280107060642.dkr.ecr.us-west-1.amazonaws.com
-      ECR_REPOSITORY: rental-app
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
@@ -85,20 +81,20 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           role-session-name: deploy-role-session
           aws-region: us-west-1
       - name: Login to ECR
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.ECR_REGISTRY }}
+          registry: ${{ secrets.ECR_REGISTRY }}
       - name: Build and Push image to ECR
         uses: docker/build-push-action@v2
         with:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          tags: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
       - name: Render Amazon ECS task definition
         id: render-container
         uses: aws-actions/amazon-ecs-render-task-definition@v1
