--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -77,7 +77,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: docker/setup-buildx-action@v1
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -88,6 +87,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.ECR_REGISTRY }}
+      - name: rewrite task-definition
+        run: sed -i -e s/SED_TARGET_AWS_ACCOUNT_ID/${{ secrets.AWS_ACCOUNT_ID }}/g .aws/task-definition.json
       - name: Build and Push image to ECR
         uses: docker/build-push-action@v2
         with:
@@ -101,7 +102,7 @@ jobs:
         with:
           task-definition: aws/task-definition.json
           container-name: apache-laravel
-          image: 280107060642.dkr.ecr.us-west-1.amazonaws.com/rental-app:${{ github.sha }}
+          image: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-west-1.amazonaws.com/rental-app:${{ github.sha }}
       - name: Deploy to Amazon ECS service
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
