--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -68,46 +68,46 @@ jobs:
       run: ./vendor/bin/phpcs --standard=phpcs.xml ./
       working-directory: ./app
 
-  aws-deploy:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    needs: laravel-tests
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v1
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          role-session-name: deploy-role-session
-          aws-region: us-west-1
-      - name: Login to ECR
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.ECR_REGISTRY }}
-      - name: rewrite task-definition
-        run: sed -i -e s/SED_TARGET_AWS_ACCOUNT_ID/${{ secrets.AWS_ACCOUNT_ID }}/g aws/task-definition.json
-      - name: Build and Push image to ECR
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: docker/Dockerfile
-          push: true
-          tags: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
-      - name: Render Amazon ECS task definition
-        id: render-container
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: aws/task-definition.json
-          container-name: apache-laravel
-          image: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-west-1.amazonaws.com/rental-app:${{ github.sha }}
-      - name: Deploy to Amazon ECS service
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.render-container.outputs.task-definition }}
-          service: rental-app-service
-          cluster: rental-app-cluster-def1
-          force-new-deployment: true
+  # aws-deploy:
+  #   if: github.event.pull_request.merged == true
+  #   runs-on: ubuntu-latest
+  #   needs: laravel-tests
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: docker/setup-buildx-action@v1
+  #     - name: Configure AWS Credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+  #         role-session-name: deploy-role-session
+  #         aws-region: us-west-1
+  #     - name: Login to ECR
+  #       uses: docker/login-action@v1
+  #       with:
+  #         registry: ${{ secrets.ECR_REGISTRY }}
+  #     - name: rewrite task-definition
+  #       run: sed -i -e s/SED_TARGET_AWS_ACCOUNT_ID/${{ secrets.AWS_ACCOUNT_ID }}/g aws/task-definition.json
+  #     - name: Build and Push image to ECR
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         context: .
+  #         file: docker/Dockerfile
+  #         push: true
+  #         tags: ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ github.sha }}
+  #     - name: Render Amazon ECS task definition
+  #       id: render-container
+  #       uses: aws-actions/amazon-ecs-render-task-definition@v1
+  #       with:
+  #         task-definition: aws/task-definition.json
+  #         container-name: apache-laravel
+  #         image: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-west-1.amazonaws.com/rental-app:${{ github.sha }}
+  #     - name: Deploy to Amazon ECS service
+  #       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+  #       with:
+  #         task-definition: ${{ steps.render-container.outputs.task-definition }}
+  #         service: rental-app-service
+  #         cluster: rental-app-cluster-def1
+  #         force-new-deployment: true
