fix: correct  port syntax in yml

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,8 +27,9 @@ jobs:
           MYSQL_PASSWORD: pass
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       selenium-hub:
-          image: selenium/hub:3.141.59-vanadium
-          ports: 4444:4444
+        image: selenium/hub:3.141.59-vanadium
+        ports:
+          - 4444:4444
       chrome:
         image: selenium/node-chrome:3.141.59-vanadium
         environment:
