--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,6 +36,14 @@ jobs:
           HUB_HOST: selenium-hub
           HUB_PORT: 4444
 
+    env:
+      DB_CONNECTION: mysql
+      DB_HOST: localhost
+      DB_PORT: 3306
+      DB_DATABASE: database_test
+      DB_USERNAME: user
+      DB_PASSWORD: passx
+
     steps:
     - uses: shivammathur/setup-php@v2
       with:
