--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -42,7 +42,7 @@ jobs:
       DB_PORT: 3306
       DB_DATABASE: database_test
       DB_USERNAME: user
-      DB_PASSWORD: passx
+      DB_PASSWORD: pass
 
     steps:
     - uses: shivammathur/setup-php@v2
