--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,15 +16,15 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      db-test:
+      mysql:
         image: mysql:8.0
         ports:
           - 3306:3306
         options: --health-cmd "mysqladmin ping -h localhost" --health-interval 20s --health-timeout 10s --health-retries 10
         env:
-          MYSQL_DATABASE: database_test
+          MYSQL_DATABASE: laravel
           MYSQL_USER: user
-          MYSQL_PASSWORD: pass
+          MYSQL_PASSWORD: password
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       selenium-hub:
         image: selenium/hub:3.141.59-vanadium
@@ -38,11 +38,11 @@ jobs:
 
     env:
       DB_CONNECTION: mysql
-      DB_HOST: localhost
+      DB_HOST: 127.0.0.1
       DB_PORT: 3306
-      DB_DATABASE: database_test
+      DB_DATABASE: laravel
       DB_USERNAME: user
-      DB_PASSWORD: pass
+      DB_PASSWORD: password
 
     steps:
     - uses: shivammathur/setup-php@v2
@@ -71,7 +71,7 @@ jobs:
       run: ./vendor/bin/phpcs --standard=phpcs.xml ./
       working-directory: ./app
     - name: Execute tests
-      run: php artisan test --env=testing
+      run: php artisan test
       working-directory: ./app
 
     # prepare for Dusk
@@ -83,7 +83,7 @@ jobs:
       working-directory: ./app
 
     - name: Execute Laravel Dusk
-      run: php artisan dusk --env=testing
+      run: php artisan dusk
       working-directory: ./app
 
     - uses: actions/upload-artifact@v2
