--- a/app/.env.dusk.testing
+++ b/app/.env.dusk.testing
@@ -51,4 +51,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DUSK_DRIVER_URL=http://selenium:4444/wd/hub
+DUSK_BASE_URL=http://app:80
+DUSK_DRIVER_URL=http://selenium-hub:4444/wd/hub
